Updated images. Added user card decription

--- a/redux.html
+++ b/redux.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Jemma Poffinbarger</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>Jem's Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Jemma Poffinbarger">
+    <meta property="og:description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jemsoftware.dev">
+    <meta property="og:site_name" content="Jemma Poffinbarger">
+    <meta name="twitter:url" content="https://jemsoftware.dev/">
+    <meta name="twitter:site" content="@jemtanuki">
+    <meta name="twitter:title" content="Jemma Poffinbarger">
+    <meta name="twitter:description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta name="description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
     <link rel="stylesheet" href="css/redux.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
+    <link rel="me" href="https://chitter.xyz/@Jemma">
     <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 </head>
 <body>
     <div class="display">
         <div class="app">
-            <div class="statusbar">
-                <h3 id="carrier">iPod</h3>
-                <div class="wifi">
-                    <svg class="svg-icon" style="width: 1.5em; height: 1.5em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M512 192c-163 0-326 67.2-443 176.6-6.6 6-6.8 16.2-0.6 22.8l53.4 55.8c6.2 6.6 16.6 6.8 23.2 0.6 46.6-43.2 99.8-77.6 158.6-102 66-27.6 136.2-41.4 208.6-41.4s142.6 14 208.6 41.4c58.8 24.6 112 58.8 158.6 102 6.6 6.2 17 6 23.2-0.6l53.4-55.8c6.2-6.4 6-16.6-0.6-22.8C838 259.2 675 192 512 192z"/><path d="M226.4 555l57.2 56.6c6.2 6 16 6.4 22.4 0.6 56.6-50.2 129.2-77.8 205.8-77.8s149.2 27.4 205.8 77.8c6.4 5.8 16.2 5.4 22.4-0.6l57.2-56.6c6.6-6.6 6.4-17.2-0.6-23.4-75-67.8-175.2-109.2-285-109.2s-210 41.4-285 109.2c-6.6 6.2-6.8 16.8-0.2 23.4zM512 648.4c-46.8 0-89.2 19.6-118.8 51-6 6.4-5.8 16.2 0.4 22.4l106.8 105.4c6.4 6.4 16.8 6.4 23.2 0l106.8-105.4c6.2-6.2 6.4-16 0.4-22.4-29.6-31.2-72-51-118.8-51z"/></svg>
+            <header>
+                <div class="statusbar">
+                    <h3 id="carrier">iPod</h3>
+                    <div class="wifi">
+                        <svg class="svg-icon" style="width: 1.5em; height: 1.5em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M512 192c-163 0-326 67.2-443 176.6-6.6 6-6.8 16.2-0.6 22.8l53.4 55.8c6.2 6.6 16.6 6.8 23.2 0.6 46.6-43.2 99.8-77.6 158.6-102 66-27.6 136.2-41.4 208.6-41.4s142.6 14 208.6 41.4c58.8 24.6 112 58.8 158.6 102 6.6 6.2 17 6 23.2-0.6l53.4-55.8c6.2-6.4 6-16.6-0.6-22.8C838 259.2 675 192 512 192z"/><path d="M226.4 555l57.2 56.6c6.2 6 16 6.4 22.4 0.6 56.6-50.2 129.2-77.8 205.8-77.8s149.2 27.4 205.8 77.8c6.4 5.8 16.2 5.4 22.4-0.6l57.2-56.6c6.6-6.6 6.4-17.2-0.6-23.4-75-67.8-175.2-109.2-285-109.2s-210 41.4-285 109.2c-6.6 6.2-6.8 16.8-0.2 23.4zM512 648.4c-46.8 0-89.2 19.6-118.8 51-6 6.4-5.8 16.2 0.4 22.4l106.8 105.4c6.4 6.4 16.8 6.4 23.2 0l106.8-105.4c6.2-6.2 6.4-16 0.4-22.4-29.6-31.2-72-51-118.8-51z"/></svg>
+                    </div>
+                    <h3 id="time">7:02 PM</h3>
+                    <h3 id="battery">69%</h3>
                 </div>
-                <h3 id="time">7:02 PM</h3>
-                <h3 id="battery">69%</h3>
-            </div>
-            <div class="banner">
-                <div class="back-nav-filter" style="display: none">
-                    <button class="back-nav">General</button>
+                <div class="banner">
+                    <div class="back-nav-filter" style="display: none">
+                        <button class="back-nav">General</button>
+                    </div>
+                    <h2>JemSoftware Development</h2>
                 </div>
-                <h2>JemSoftware Development</h2>
-            </div>
+            </header>
             <div class="content">
-                <button class="settings"><h2>Testing 123!</h2></button>
+                <div class="wrapper">
+                    <div class="left-image-right-content">
+                        <img src="https://github.com/caramelkat.png">
+                        <div class="info">
+                            <h2>Jemma Poffinbarger</h2>
+                            <h4>Full-stack developer & CS Student</h4>
+                            <h4>21MB</h4>
+                        </div>
+                    </div>
+                    <p>
+                        I'm a full-stack developer currently attending the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
+                        Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.
+                        <br><br>
+                        While most of my work is with web applications, I have experience developing for iOS, Android, Windows, and more.
+                    </p>
+                </div>
                 <h1 class="settings-header">Contact Me:</h1>
-                <ul class="list arrow-list icon-list">
+                <ul class="wrapper list arrow-list icon-list">
                     <li onclick="location.href='mailto:jemma@jemsoftware.dev'">
-                        <img src="/images/iOS/mail.jpg" alt="e-mail icon">
+                        <img src="/images/iOS/mail.png" alt="e-mail icon">
                         <h2>E-Mail</h2>
                     </li>
                     <li onclick="location.href='https://twitter.com/JemTanuki'">
-                        <img src="/images/iOS/twitter.jpg" alt="twitter icon">
+                        <img src="/images/iOS/twitter.png" alt="twitter icon">
                         <h2>Twitter</h2>
                     </li>
                     <li onclick="location.href='https://chitter.xyz/@Jemma'" class="shine">
@@ -48,7 +79,7 @@
                         <img src="/images/iOS/linkedin.png" alt="Linked In icon">
                         <h2>LinkedIn</h2>
                     </li>
-                    <li onclick="location.href=''">
+                    <li onclick="location.href=''" class="shine">
                         <img src="/images/iOS/discord.png" alt="Discord icon">
                         <h2>Discord</h2>
                     </li>
@@ -57,20 +88,18 @@
                         <h2>GitHub</h2>
                     </li>
                 </ul>
-                <p>
-                    This is a test paragraph
-                </p>
-                <h1 class="settings-header">Like what I do? Consider throwing me a coin:</h1>
-                <ul class="list arrow-list icon-list">
+                <h1 class="settings-header">Consider throwing me a coin:</h1>
+                <ul class="wrapper list arrow-list icon-list">
                     <li onclick="location.href='https://cash.app/$JemTanuki'" class="shine">
                         <img src="/images/iOS/cashapp.png" alt="Cash App icon">
                         <h2>Cash App</h2>
                     </li>
                     <li onclick="location.href='https://ko-fi.com/jemtanuki'" class="shine">
-                        <img src="/images/iOS/kofi.png" alt="Ko-Fi icon">
+                        <img src="/images/iOS/kofi.jpeg" alt="Ko-Fi icon">
                         <h2>Ko-Fi</h2>
                     </li>
                 </ul>
+                <p>Copyright 2022 - Jemma Poffinbarger</p>
             </div>
         </div>
     </div>
