updated order of contacts. Added matrix contact

--- a/redux.html
+++ b/redux.html
@@ -17,7 +17,6 @@
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
     <link rel="stylesheet" href="css/redux.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v5/font/simple-icons.min.css" type="text/css">
     <link rel="me" href="https://chitter.xyz/@Jemma">
     <script defer data-domain="jemsoftware.dev" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 </head>
@@ -59,10 +58,19 @@
                 </div>
                 <h1 class="settings-header">Contact Me:</h1>
                 <ul class="wrapper list arrow-list icon-list">
+                    <li onclick="location.href='https://www.linkedin.com/in/jemma-poffinbarger'">
+                        <img src="/images/iOS/linkedin.png" alt="Linked In icon">
+                        <h2>LinkedIn</h2>
+                    </li>
+                    <li onclick="location.href='https://github.com/CaramelKat'" class="shine">
+                        <img src="/images/iOS/github.png" alt="GitHub icon">
+                        <h2>GitHub</h2>
+                    </li>
                     <li onclick="location.href='mailto:jemma@jemsoftware.dev'">
                         <img src="/images/iOS/mail.png" alt="e-mail icon">
                         <h2>E-Mail</h2>
                     </li>
+
                     <li onclick="location.href='https://twitter.com/JemTanuki'">
                         <img src="/images/iOS/twitter.png" alt="twitter icon">
                         <h2>Twitter</h2>
@@ -71,21 +79,17 @@
                         <img src="/images/iOS/mastodon.png" alt="mastodon icon">
                         <h2>Mastodon</h2>
                     </li>
+                    <li onclick="location.href='https://matrix.to/#/@jemma:jemverse.xyz'" class="shine">
+                        <img src="/images/iOS/element.png" alt="element icon">
+                        <h2>Matrix</h2>
+                    </li>
                     <li onclick="location.href='https://t.me/JemTanuki'">
                         <img src="/images/iOS/telegram.png" alt="telegram icon">
                         <h2>Telegram</h2>
                     </li>
-                    <li onclick="location.href='https://www.linkedin.com/in/jemma-poffinbarger'">
-                        <img src="/images/iOS/linkedin.png" alt="Linked In icon">
-                        <h2>LinkedIn</h2>
-                    </li>
-                    <li onclick="location.href=''" class="shine">
+                    <li class="shine">
                         <img src="/images/iOS/discord.png" alt="Discord icon">
-                        <h2>Discord</h2>
-                    </li>
-                    <li onclick="location.href='https://github.com/CaramelKat'" class="shine">
-                        <img src="/images/iOS/github.png" alt="GitHub icon">
-                        <h2>GitHub</h2>
+                        <h2>Jemma#6508</h2>
                     </li>
                 </ul>
                 <h1 class="settings-header">Consider throwing me a coin:</h1>
