Added battery icon and fixed header styling

--- a/redux.html
+++ b/redux.html
@@ -31,6 +31,12 @@
                     </div>
                     <h3 id="time">7:02 PM</h3>
                     <h3 id="battery">69%</h3>
+                    <div id="battery-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke-linecap="round" stroke-linejoin="round" class="feather feather-battery" stroke-width="1" stroke="black" style="width: 1.5em;height: 1.5em;vertical-align: middle;overflow: hidden;stroke: currentColor;color: #bbc7d3;" width="32" viewBox="0 0 20 25" height="20">
+                            <rect xmlns="http://www.w3.org/2000/svg" ry="0" rx="0" width="12" y="7.75" fill="currentColor" x="1.5" height="7.5"/>
+                            <rect xmlns="http://www.w3.org/2000/svg" y="6" ry="0" rx="0" width="20" x="0" height="11"/>
+                            <rect xmlns="http://www.w3.org/2000/svg" height="4" width="2" rx="1" ry="0" x="20" y="10"/></svg>
+                    </div>
                 </div>
                 <div class="banner">
                     <div class="back-nav-filter" style="display: none">
@@ -45,7 +51,7 @@
                         <img src="https://github.com/caramelkat.png">
                         <div class="info">
                             <h2>Jemma Poffinbarger</h2>
-                            <h4>Full-stack developer & CS Student</h4>
+                            <h4>Full-Stack Dev & CS Student</h4>
                             <h4>21MB</h4>
                         </div>
                     </div>
