--- a/weather.html
+++ b/weather.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <script src=""></script>
     <link rel="stylesheet" href="css/redux.css">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <style>
         html, body {
             margin: 0;
