--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                 </div>
                 <h1 class="settings-header">Contact Me:</h1>
                 <ul class="wrapper list arrow-list icon-list">
+                    <li class="shine">
+                        <a href="files/Resume.pdf">
+                            <img src="/images/iOS/notes.png" alt="Linked In icon">
+                            <h2>Resume</h2>
+                        </a>
+                    </li>
                     <li>
                         <a href="https://www.linkedin.com/in/jemma-poffinbarger">
                             <img src="/images/iOS/linkedin.png" alt="Linked In icon">
@@ -86,18 +92,17 @@
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:jemma@jemsoftware.dev">
+                        <a href="mailto:contact@jemsoftware.dev">
                             <img src="/images/iOS/mail.png" alt="e-mail icon">
                             <h2>E-Mail</h2>
                         </a>
                     </li>
-
-                    <li>
+                    <!--<li>
                         <a href="https://twitter.com/JemTanuki">
                             <img src="/images/iOS/twitter.png" alt="twitter icon">
                             <h2>Twitter</h2>
                         </a>
-                    </li>
+                    </li>-->
                     <li class="shine">
                         <a href="https://chitter.xyz/@Jemma">
                             <img src="/images/iOS/mastodon.png" alt="mastodon icon">
@@ -110,18 +115,18 @@
                             <h2>Matrix</h2>
                         </a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="https://t.me/JemTanuki">
                             <img src="/images/iOS/telegram.png" alt="telegram icon">
                             <h2>Telegram</h2>
                         </a>
-                    </li>
+                    </li>-->
                     <li class="shine">
                         <img src="/images/iOS/discord.png" alt="Discord icon">
                         <h2>Jemma#6508</h2>
                     </li>
                 </ul>
-                <h1 class="settings-header">Consider throwing me a coin:</h1>
+                <h1 class="settings-header">Want to help support my work?</h1>
                 <ul class="wrapper list arrow-list icon-list">
                     <li class="shine">
                         <a href="https://cash.app/$JemTanuki">
@@ -136,7 +141,7 @@
                         </a>
                     </li>
                 </ul>
-                <p>Copyright 2022 - Jemma Poffinbarger</p>
+                <p>Copyright 2023 - Jemma Poffinbarger</p>
             </div>
             <div class="content right" id="screen-1">
                 <div class="wrapper">
